Fix vercel.json configuration conflict

--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,11 @@
       "use": "@vercel/static"
     }
   ],
-  "routes": [
+  "redirects": [
     {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "status": 404,
-      "dest": "/404.html"
+      "source": "/(.*)",
+      "destination": "/404.html",
+      "statusCode": 404
     }
   ],
   "headers": [
