--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,18 @@
 {
   "version": 2,
-  "public": true
+  "public": true,
+  "builds": [
+    {
+      "src": "**/*",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false
 }
