Revert "Optimize site performance - 99% reduction in JS/CSS size"
This reverts commit 02751bb82bb9a4d03c4fdd6a5088d4e25cf72580.

--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "edylicious-clone",
-  "version": "2.0.0",
-  "description": "Optimized Edylicious tea room website",
+  "version": "1.0.0",
+  "description": "Static clone of Edylicious tea room website",
   "scripts": {
     "dev": "python3 -m http.server 8000",
-    "build": "npm run build:clean && npm run build:copy && npm run build:optimize",
-    "build:clean": "rm -rf public",
-    "build:copy": "mkdir -p public && cp -r index-optimized.html assets pages css js images public/ 2>/dev/null || true",
-    "build:optimize": "echo 'Build complete. Ready for deployment!'",
-    "serve": "cd public && python3 -m http.server 8000"
+    "build": "echo 'No build required for static site'"
   },
-  "keywords": ["tea-room", "catering", "static-site", "optimized"],
-  "author": "Edylicious",
+  "keywords": ["tea-room", "catering", "static-site"],
+  "author": "Edylicious Clone",
   "license": "MIT",
   "homepage": "https://edylicious.com"
 }
